# AccessSystem

./: CMakeLists.txt  Cell.qml  Door.qml  README.md  TestForm.ui.qml  ViewInc.qml  main.cpp  main.qml  qml.qrc  settings.h
Logger/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  paramstab.cpp  paramstab.h  tabwidget.cpp  tabwidget.h
RaspberryDemoQml/: ApplicationFlow.qml  ApplicationFlowForm.ui.qml  Door.qml  RaspberryDemoQml.pro  Restart.qml  Result.qml  ViewDoors.qml  ViewInc.qml  communicator.cpp  communicator.h  constants.h  main.cpp  main.qml  manager.cpp  manager.h  qml.qrc  reader.cpp  reader.h  relaiscommunicator.cpp  relaiscommunicator.h  request.cpp  request.h  server.cpp  server.h  settings.cpp  settings.h
cardTest/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
serial/: Makefile  main4.cpp
serverTest2/: CMakeLists.txt  cardwindow.cpp  cardwindow.h  client.cpp  client.h  constants.h  debugwindow.cpp  debugwindow.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  parameters.cpp  parameters.h  relaiswindow.cpp  relaiswindow.h  serverwindow.cpp  serverwindow.h  tabwidget.cpp  tabwidget.h  tabwindow.cpp  tabwindow.h  uiwindow.cpp  uiwindow.h
